report - begin first manip

--- a/ST50_Docs/rapport/ST50__ROMETPierre.tex
+++ b/ST50_Docs/rapport/ST50__ROMETPierre.tex
@@ -159,12 +159,12 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
   
   	- L'expérience Atlas, au LHC (Cern), est l'un des deux détecteurs polyvalents du grand collisionneur de hadrons (LHC). Il étudie des domaines de de physique très variés, de la recherche du boson de higgs, aux dimensions supplémentaires de l'espace-temps, en passant par les particules qui pourraient former la matière noire.
   	
-  	\begin{figure}[!ht]
+  \begin{figure}[!ht]
     \center
     %\hfill\hbox to 0pt{\hss\includegraphics[width=10cm]{ATLASLHC.jpg}\hss}\hfill\null\newline
     \includegraphics[width=9cm]{ATLASLHC.jpg}
     \caption{Expérience Atlas}
-		\end{figure}
+	\end{figure}
   	
  	
  	- L'expérience CDF pour "Collider Detector at Fermilab" met en jeux un accélérateur de particule, nommé le "Tevatron", faisant accélérer et se collisioner, des prontons ainsi que des antiprotons. 	Il à pour but d'observer et de découvrir l'identité ainsi que les propriétés des particules qui compose l'univers, et de comprendre les interactions entre ces dernières.
@@ -175,7 +175,7 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
     %\hfill\hbox to 0pt{\hss\includegraphics[width=11cm]{D0.jpg}\hss}\hfill\null\newline%
     \includegraphics[width=11cm]{D0.jpg}
     \caption{Expérience CDF (Collider Detector at Fermilab)}
-		\end{figure} 
+	\end{figure} 
  	
   \item Physique des saveurs:
  
@@ -209,8 +209,8 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
     %\hfill\hbox to 0pt{\hss\includegraphics[width=8cm]{lsst.jpg}\hss}\hfill\null
     \includegraphics[width=5cm]{lsst.jpg}
     \caption{Projet LSST (Large Synoptic Survey Telescope)}
-		\end{figure} 
-  	
+	\end{figure} 
+		  	
   \end{itemize}
   
     
@@ -251,7 +251,7 @@ avoir été explorée. Certains développements ont consisté à introduire des 
     %\hfill\hbox to 0pt{\hss\includegraphics[width=15cm]{MECA_PIANO.png}\hss}\hfill\null
     \includegraphics[width=15cm]{MECA_PIANO.png}
     \caption{Schéma de mécanique de Piano}
-		\end{figure} 
+	\end{figure} 
 
 Côté éléments actifs, l’essentiel des innovations concerne la reproduction autonome par l’instrument d’une musique jouée précédemment (sur lui même ou sur un instrument similaire), c’est la cas par exemple de la technologie "DisklavierTM" mise au point par Yamaha. Il n’y a pas d’interaction directe entre l’artiste et la mécanique augmentée. La mécanique de ces pianos enregistre le jeu de l’artiste puis le restitue sans son aide, avec une
 perte de sensibilité notable. Il n’y a donc pas d’exploration de nouvelles capacités sonores ou d’augmentation de la palette de couleur de l’instrument, bien au contraire. Notons cependant les explorations de certains chercheurs comme par exemple Andrew McPherson6 et son “Magnetic Resonator Piano” où des électroaimants placés au dessus des cordes les maintiennent en résonance sous le contrôle de l’interprète offrant ici très clairement de nouvelles options d’expression.
@@ -297,7 +297,7 @@ Nos premières réflexions sur la réalisation d’un système d’assistance et
     %\hfill\hbox to 0pt{\hss\includegraphics[width=13cm]{MECA_PIANO2.png}\hss}\hfill\null
     \includegraphics[width=10cm]{MECA_PIANO2.png}
     \caption{Mécanique de Piano}
-		\end{figure} 
+	\end{figure} 
 
 %Une mécanique de type Renner avec un modèle 3D de l’actuateur linéaire
 %envisagé (en noir posé sur la touche) pour donner l’échelle. L’actuateur peut être soit intégré
@@ -306,18 +306,18 @@ Nos premières réflexions sur la réalisation d’un système d’assistance et
 %une vue de l’actuateur sur la touche qui montre que sa largeur est parfaitement adaptée.
 
 \begin{itemize}
-\item  rapidité : temps de réponse à la milliseconde, vitesse maximum de l’ordre du mètre par
-seconde, accélération de l’ordre de 10 ou 20 g (100 à 200 m/s2 ).
+	\item  rapidité : temps de réponse à la milliseconde, vitesse maximum de l’ordre du mètre par
+	seconde, accélération de l’ordre de 10 ou 20 g (100 à 200 m/s2 ).
 
-\item Puissance : force en impulsion de l'ordre de 1kg ou 10N.
+	\item Puissance : force en impulsion de l'ordre de 1kg ou 10N.
 
-\item encombrement faible: dimension de l'ordre de 1 cm(l) x 1 cm(p) x 5 cm(h).
+	\item encombrement faible: dimension de l'ordre de 1 cm(l) x 1 cm(p) x 5 cm(h).
 
-\item bruit, inexistant ou négligeable : 10-15 dB à moins de 1m.
+	\item bruit, inexistant ou négligeable : 10-15 dB à moins de 1m.
 
-\item précision : positionnement du manche de marteau au dixième (0.1 mm).
+	\item précision : positionnement du manche de marteau au dixième (0.1 mm).
 
-\item fiabilité : durée de vie de milliers d'heures et plus de 10 millions de mouvements.
+	\item fiabilité : durée de vie de milliers d'heures et plus de 10 millions de mouvements.
 \end{itemize}
 
 Des moteurs avec ces caractéristiques sont disponibles aujourd’hui et font appel (entre autres) à de puissants aimants miniatures pour les mouvements et à des sondes à effet Hall intégrées pour le positionnement. La figure 5.2 montre un profil de mécanique (c’est a dire la mécanique complète d’une touche individuelle) de la marque Renner, d’autres modèles existent, notamment sur les Steinway, mais leurs caractéristiques essentielles sont semblables. Sur cette même figure, un modèle en impression 3D d’un moteur linéaire de la marque Faulhaber, aux performances mécaniques adaptées à notre problème, est posé sur la touche. On peut voir que ses dimensions sont idéalement adaptées à celles d’un clavier de piano.
@@ -327,9 +327,9 @@ L’électronique qui permet la mesure du déplacements des touches (connectée 
 	\begin{figure}[!ht]
     \center
     %\hfill\hbox to 0pt{\hss\includegraphics[width=15cm]{MECA_PIANO3.png}\hss}\hfill\null
-   \includegraphics[width=15cm]{MECA_PIANO3.png}
-    \caption{Mécanique de type Renner avec un modèle 3D de l’actuateur linéaire}
-		\end{figure}
+   	\includegraphics[width=15cm]{MECA_PIANO3.png}
+ 		\caption{Mécanique de type Renner avec un modèle 3D de l’actuateur linéaire}
+	\end{figure}
 
 %Figure 3: une implémentation possible du moteur et des capteurs. Plusieurs types de
 %capteurs sont envisageables, accéléromètre sur la touche, capteur de pression entre la
@@ -424,9 +424,7 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
     %\hfill\hbox to 0pt{\hss\includegraphics[width=17cm]{CH.png}\hss}\hfill\null
   	\includegraphics[width=17cm]{CH.png}
     \caption{Chaine de contôle d'une touche de Piano}
-		\end{figure}
-	
-	
+	\end{figure}	
 	
 	Ainsi, la toute première tâche réalisé fut de mener une étude de cas entre les deux bus de communication à disposition, le bus I2C et le bus SPI, afin de déterminer lequel serai le plus adapter à notre projet.
 	
@@ -473,171 +471,133 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 	
 	\part{Travaux et réalisation}	
 	
+	\chapter{Réalisation de la chaine de contôle}
+	
+	
+	
+	
+	\chapter{Asservissement et caractérisation}
+	
+	Lors de la précédente partie, nous avons abordé l'ensemble des aspects qui nous ont permis de mettre au point notre chaine de contrôle; en partant des données fournies par notre accéléromètre, leurs réceptions et leurs traitement au sein de notre carte programmable (FPGA), jusqu'à leurs envoie et leurs réception par le Convertisseur Numérique Analogique, permettant le contrôle du contrôleur moteur, en lui transmettant des consignes de fonctionnement.
+	
+	Lors de cette partie, nous allons nous concentrer sur la mise au point de l'asservissement numérique, élément indispensable, devant prendre place au sein du filtre numérique de notre carte programmable FPGA.
+	
+	L'asservissement numérique est un procésus en plusieurs étape, consistant à piloter un système tiers, en mesurant périodiquement des valeurs de consigne, fournie par un système de capteurs, dans notre cas, un accélérommètre. 
+	Par la suite, ces données sont traité par notre calculateur, mais étant donné le mode de traitement des inforamtions imposé par notre calculateur est de nature numérique et cadensé dans le temps de façon périodique grâce à une horloge; les informations en entrée, provenant de nos capteurs, sont donc des grandeurs discrètes.
+	
+	Les différentes étapes que l'on retrouve,  générique à tout système asservie sont les suivantes:
+	
+	\begin{itemize}
+		\item l'échantillonage d'un signal continu
+			Cette opération consiste à relever les informations prises par un signal continuà intervalles de temps
+			régulier, appelée période d'échantillonnage. On parle alors de signal échantillonné, signigiant que le
+			calculateur ne tiendra compte que des valeurs prises par le calculateur aux instants d'échantillonnage.
+			
+		\item La conversion d'un signal analogique en un signal numérique
+			Il s'agit de convertir la valeur prise par un signal analogique à l'instant d'échantillonnage en une
+			valeur numériqu,e afin qu'elle puisse être traitée par le calculateur. Un tel signal peut, par exemple, 
+			provenir d'un capteur. On parlera alors de signal de mesure.
+			 
+		\item La conversion d'un signal numérique en un signal analogique
+			Cette opération consiste à transformer le signal numérique issu du calculateur à l'instant 
+			d'échantillonnage (on parlera de signal numérique de commande), en signal analogique de commande 
+			existant sur toute la période d'échantillonnage, l'objectif étant de commander le système physique.
+			
+		\item  La synthèse d'un algorithme de calcul
+			Il s'agit d'établir une loi d'évolution du signal de commande numérique en fonction des signaux de mesure
+			et de référence, également numériques, afin de permettre au système asservi de satisfaire un cahier des
+			charges. Cette fonction est appelée correcteur numérique ou encore loi de commande numérique. Elle a pour
+			objectif de déterminer la valeur du signal numérique de commande à un instant d'échantillonnage, à partir 
+			d'un algorythme de commande, de mesure et de référence.
+	\end{itemize}
+	
+	Ainsi, l'on peut résumer sous forme de schéma bloque une structure classique d'asservissement numérique comme suivant:
+	
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=17cm]{Assert_1.png}\hss}\hfill\null
+  	\includegraphics[width=17cm]{Assert_1.png}
+    \caption{Structure classique d'asservissement numérique}
+	\end{figure}	
+	
+	De plus, l'asservissement numérique de notre projet implique la caractérisation de la fonction de transfère de notre système dans son ensemble.
+	Ainsi, afin de déterminer notre fonction de transfère, seront présenté les différents protocols et les différentes manipulations effectués sur notre banc de test.
+
+	\section{Asservissement du projet Champ}
+	
+		Au sein de notre projet, notre asservissement va reprendre les différentes étapes présentés ci-dessus.
+		
+		Ainsi, concernant l'échantillonage d'un signal continu, cette étape est réalisé au sein de notre accéléromètre étant
+		donné que ce dernier nous fournie un signal échantilloné à une fréquence de 1 KHz (Période de une millis seconde).
+		Notre accéléromètre disposant d'un convertisseur analogique numérique intégré sur chaque axe, c'est au sein de ce
+		derniers que s'effectue l'opération d'échantillonage du signal continue.
+		
+		Par la suite, c'est au sein de notre carte programmable FPGA que s'effectue la phase de traitement sur notre signal
+		discret. C'est au sein de notre filtre numérique que va être appliqué l'algorythme de synthèse sur les mesures en
+		provenance de l'accéléromètre, afin d'asservire le système contrôlé, selon le cahier des charges.
+		
+		Enfin, la fonction de conversion de notre signal numérique en un signal analogique est assuré par le convertisseur
+		numérique analogique (CNA) ayant pour rôle de fournie une commande au conrôleur moteur, existant sur toute la période
+		d'échantillonage, afin de commander notre système physique.
+		
+		Comme précédement, on peut résumé l'asservissement mise en place pour le projet CHAMP, sous la forme d'un shéma bloque, comme suivant:
+		
+		\newpage
+		
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=17cm]{Assert_1.png}\hss}\hfill\null
+  	\includegraphics[width=17cm]{Assert_2.png}
+    \caption{Asservissement numérique du projet CHAMP}
+	\end{figure}	
+		
+		
+	\section{Fonction de transfère}
+	
+		La fonction de transfère de notre système correspond à l'algorythme, appliqué sur nos données (discrètes) au sein du filtre. Une fois les données sortie de cet algorythme, les données sont haptes à piloter notre système tiers comme nous le souhaitons.
+		
+		Une fonction de transfère est le modèle mathématique de la relation entre la sortie et l'entré de notre système ; le plus souvent cette fonction étant invariante en fonction des paramètres d'entrés.
+		Du point de vue d'une approche physique, la fonction de transfère caractérise la dynamique du système; elle ne dépend que de ses caractéristiques physique. 
+		Ainsi, un système sera décrit par sa fonction de tranfert est représenté comme suivant:
+
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=17cm]{transf1.png}\hss}\hfill\null
+  	\includegraphics[width=5cm]{transf1.png}
+    \caption{Modèle quelquonque}
+	\end{figure}
+	
+	Nous aurons donc la fonction de transfère suivante : W(p) = Y(p) / x(p).
+	
+	\newpage
+	
+	\subsection{Première manipulation}
+	
+		A travers cette première manipulation, nous avons cherché à déterminer la fonction de transfère de notre modèle, comme le décris le shéma ci-dessous.
+		
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=17cm]{transf1.png}\hss}\hfill\null
+  	\includegraphics[width=5cm]{transf1.png}
+    \caption{Modèle quelquonque}
+	\end{figure}	
+		
+		Nous avons utilisé un générateur de fonction 
+	
+
+	
 	
 
 
-
-
-%\chapter{La mesure de l'accélération}
-%
-%Comme nous l'avons vu lors de la précédente partie, la réalisation d'un système d'assistance et d'asservissement d'une mécanique de piano à queue induit l'appel à des technologies de "pointe"; technologie que nous retrouvons et côtoyons au quotidiens au travers de nos smart-phone, notamment celle nous permet de mesurer une accélération (technologie qui sera une composante principale de notre projet.
-%
-%La mesure de l'accélération et la composante clef de notre projet étant données que ce seul élément rend possible la mesure de l'accélération (sur trois axes x,y,z) de la touche joué par le pianiste, ainsi que la mise en place de la boucle d'asservissement contrôlant les moteurs devant actionner les marteaux en cotons frappant les cordes.
-%
-%\section{Matériel utilisé}
-%Pour ce projet, une première maquettes utilisant des composant électronique analogique fut réaliser, se basant sur le modèle de la figure (dernière figure). Ce prototype avait pour but montré la manière de procéder et de vérifier le postulat de départ quand à la faisabilité du projet.
-%
-%% PHOTO de la maquette initiale de Hervé
-%
-%Suite à mon arrivé au sein du projet "CHAMP", j'ai commencé le développement de la nouvelle maquette (tjs basé sur le même schéma de fonctionnement) qui est maintenant basé sur des composants électronique numérique.
-%
-%Le capteur numérique utilisé et choisi par l'équipe qui initié le projet est l'accéléromètre ADXL355 du fabriquant "ANALOG DEVICE". Ce composant nous permet de mesurer une accélération sur 3 axes (x,y,z) avec une précision de +/- 8 fois la force gravitationnelle.
-%
-%Le module ADXL355 permet l'échange de données avec notre FPGA (unité de traitement et de calcule) via des transmissions série synchrones. Il peut ainsi communiquer soit en mode SPI, soit en mode I2C.
-%
-% \subsection{Bus SPI}
-%
-%Une Liaison SPI (Serial Peripheral Interface) est un bus de données synchrone baptisé par Motorola, opèrant en Full-Duplex et qui peut transférer des données sur de courtes distances à des vitesses élevées. Les circuits communiquent selon un schéma Maitre/Esclave, où le maitre s'occupe totalement de la communication. Plusieurs esclave peuvent coexister sur un même bus, dans ce cas, la sélection du destinataire se fait par une ligne dédiée entre le maitre et l'esclave appelée "Chip Select" (CS) ou Slave Select (SS).
-%
-%  \subsubsection{Principe de fonctionnement}
-%
-%Durant le transfère de données, le dispositif peut travailler soit en maitre, soit en esclave. L'interface SPI permet de connecter un ou plusieurs esclaves à un seul maitre via le même bus.
-%
-%\hfill\hbox to 0pt{\hss\includegraphics[width=7cm]{SPI1.png}\hss}\hfill\null\newline
-%
-%Le bus SPI utilise 4 signaux logiques :
-%
-%\hfill\hbox to 0pt{\hss\includegraphics[width=7cm]{SPI2.png}\hss}\hfill\null\newline
-%
-%\begin{itemize}
-%\item SCLK (Serial Clock) : Le signal d'horloge, il est utilisé pour synchroniser les données échangées entre le maître et les esclaves. Cette ligne est nécessairement une sortie sur le maître et une entrée sur le ou les esclaves.
-%
-%\item MOSI (Master Output, Slave Input) : est utilisé pour transférer les données du maître vers l'esclave.
-%
-%\item MISO (Master Input, Slave Output) : est utilisé pour transférer les données l'esclave vers le maître.
-%
-%\item SS (Slave Select) : le maître utilise ce signal pour choisir avec qui il veut dialoguer.Ce signal est actif à l'état bas.Les esclaves ne peuvent pas communiquer entre eux.Seul le maître peut autoriser un esclave à dialoguer, cela dit l'esclave ne peut commencer le dialogue que s'il n'a pas l'autorisation.
-%\end{itemize}
-%
-%On parlera aussi de liaison à 3 fils : Permet de véhiculer l’information dans les 2 sens (bidirectionnelle), un fil différent étant dévolu à chaque sens de transfert d’information. Comme ceci permet la communication simultanée dans les 2 sens de transmission, on parlera de liaison full-duplex :
-%pendant que le maître transmet des données sur la ligne MOSI, vers l’esclave sélectionné, il en reçoit de celui-ci par la ligne MISO.
-%
-%  \subsubsection{Principe de transmission}
-%Une transmission SPI typique est une communication simultanée entre un maître et un esclave :
-%Tout d'abord, Le maître initie la communication en sélectionnant l'esclave avec qui il veut communiquer par l'utilisation du signal SS qui est actif bas.
-%Ensuite, Le maître et l'esclave préparent les données à envoyer dans leur registres à décalage.
-%Enfin, Le maître génère des impulsions d'horloge pour synchroniser les données échangées.
-%
-%À chaque coup d'horloge le maître et l'esclave s'échangent un bit. Après huit coups d'horloges le maître a transmis un octet à l'esclave et vice versa. La vitesse de l'horloge est réglée selon des caractéristiques propres aux périphériques.
-%
-%\hfill\hbox to 0pt{\hss\includegraphics[width=7cm]{SPI3.png}\hss}\hfill\null\newline
-%
-%pendant que le maître transmet les données sur la ligne MOSI, vers l’esclave sélectionné, il en reçoit de celui-ci par la ligne MISO.
-%Voici le tout sous forme de dessins. En rouge les bits reçus, en bleu les bits envoyés :
-%
-%\hfill\hbox to 0pt{\hss\includegraphics[width=7cm]{SPI4.png}\hss}\hfill\null\newline
-%
-%  \subsubsection{Mode maitre}
-%Lorsqu'il est configuré en tant que maître, l'interface SPI n'a aucun contrôle automatique de la ligne de SS.Pour la configuration en mode maitre,nous devons déclarer : MOSI, SS et SCLK en sortie; MISO en entrée ; mettre le bit MSTR à 1 dans le registre SPCR. La mise de SS à l’état bas permet
-%d'établir la communication avec l’esclave.
-%le principe de transmission suit cette ordre :
-%
-%    Ecriture d’un octet dans le registre de données (SPDR).
-%    génération du signal d'horloge.
-%    envoie des données contenue dans le registre de données vers l’esclave via la ligne MOSI.
-%    arret du signal d'horloge.
-%    mise du bit SPIF = 1 (flag de fin de communication)
-%    Si SPIE = 1 (autorisation de l’interruption) : interruption demandée, 2 options :
-%        chargement de l’octet suivant dans le registre
-%        mise de SS à l’état haut pour signaler la fin du paquet de données
-%
-%Le dernier octet entrant sera conservés dans le registre tampon pour une utilisation ultérieure.
-%
-%  \subsubsection{Mode esclave}
-%Pour la configuration en mode esclave,nous devons déclarer : MOSI, SS et SCLK en entrée; MISO en sortie ;Mettre le bit MSTR à 0 dans le registre SPCR. L’esclave reste en mode sommeil jusqu’à ce que le maître l'appelle(en mettant la ligne SS à l’état bas). La mise de SS à l’état bas permet d'établir la communication avec l’esclave. Le principe de transmission suit cette ordre :
-%
-%    sélection de l'esclave avec qui communiquer
-%    génération du signal d'horloge par le maître
-%    envoie des données contenue dans le registre des données vers l’esclave via la ligne MISO.
-%    mise du bit SPIF = 1 (flag de fin de communication)
-%    Si SPIE = 1 (autorisation de l’interruption) :
-%        interruption demandée
-%        chargement de l’octet suivant dans le registre
-%        
-%  \subsubsection{Avantages}
-%
-%\begin{itemize}
-%\item Communication full-duplex.
-%\item Vitesse assez importante par rapport à l’I2C (10-100MBits/s).
-%\item Partage d’un bus commun pour l’horloge, MISO et MOSI entre les périphériques.
-%\item Simplicité de l’interface matérielle.
-%\item Aucun arbitre nécessaire car aucune collision possible.
-%\item Les esclaves utilisent l’horloge du maître et n’ont donc pas besoin d’oscillateur de précision.
-%\end{itemize}
-%
-%  \subsubsection{inconvénients}
-%
-%\begin{itemize}
-%\item Utilise plus de pattes d’un boitier que l’I2C qui en utilise seulement 2 (et la masse).
-%\item Aucun adressage possible : Il faut une ligne de sélection par esclave en mode non chaîné.
-%\item Le protocole n’a pas d’acquittement. Le maître peut parler dans le vide sans le savoir.
-%\item Il ne peut y avoir qu’un seul maître sur le bus.
-%\item Ne s’utilise que sur de courtes distances contrairement aux liaisons RS-232, RS-485 ou bus CAN.
-%\end{itemize}
-%
-%
-% \subsection{Bus I2C}
-%Le bus I2C permet de faire communiquer entre eux des composants électroniques très divers grâce à seulement trois fils : un signal de données (SDA), un signal d'horloge (SCL), et un signal de référence électrique (masse).
-%Il s'agit d'une liaison en mode série synchrone (un bit est transmis à chaque coup d’horloge). Le nombre de composants qu'il est ainsi possible de relier est essentiellement limité par la charge capacitive des lignes SDA et SCL : 400 pF.
-%un circuit maître et un ou plusieurs circuits esclaves peuvent être connectés au bus. Les échanges se font toujours à l’initiative du maître.La transmission est half duplex : mode écriture ou mode lecture, pas possible de manière simultanée.
-%
-%  \subsubsection{Connexion électrique}
-%Comme indiqué précédemment, pour se connecter à un bus I2C il faut une masse, et deux fils de communication. Le premier fil, SDA (Signal DAta), est utilisé pour transmettre les données. L'autre fil, SCL (Signal CLock) est utilisé pour transmettre un signal d'horloge synchrone (signal qui indique le rythme d'évolution de la ligne SDA). Les tensions associées aux niveaux logiques vont dépendre de la technologie des circuits en présence (CMOS, TTL). Il faudra que tous les circuits connectés au bus I2C utilisent les mêmes potentiels pour définir les niveaux haut et bas. En définitive, cela implique que tous les composants connectés à un même bus soient alimentés de façon identique.
-%
-%\hfill\hbox to 0pt{\hss\includegraphics[width=7cm]{SPI5.png}\hss}\hfill\null\newline
-%
-%En ce qui concerne la lecture des signaux SDA et SCL, cela ne pose pas de problème. Les signaux peuvent être lus en permanence sans risque d'interférer sur le niveau de la ligne.
-%Au repos, tous les circuits connectes doivent imposer un niveau haut sur leurs sorties respectives. Si les lignes SDA et SCL sont au niveau haut dans ces conditions, cela signifie qu'aucun circuit ne tente de prendre le contrôle du bus. Si une des lignes SDA ou SCL passe à un niveau bas dans les mêmes conditions, c'est qu'un des circuits désire prendre le contrôle du bus. Mais il peut aussi y avoir deux circuits qui tentent de prendre le contrôle du bus en même temps (ou à quelques nanosecondes d'écart près). Il faut donc mettre en place un protocole pour gérer les conflits possibles.
-%
-%  \subsubsection{Protocole I2C}
-%Le protocole I2C présent différentes caractéristiques:
-%
-%\begin{itemize}
-%\item maitre-esclaves, car seul un nœud maitre peut communiquer avec les esclaves du réseau (1 ou tous)
-%\item multi-maitres, car plusieurs maitres peuvent être présents sur le réseau
-%\item synchrone, car on utilise un mécanisme de requête/réponse
-%\item half-duplex, car on peut communiquer dans les deux sens, mais pas simultanément
-%\end{itemize}
-%
-%On utilise un adressage sur 7 bits pour identifier les nœuds, ce qui permet (en théorie) jusqu’à 128 nœuds sur le réseau. Certaines adresses sont réservées pour le broadcast (communiquer vers tous les nœuds en même temps). En pratique, les constructeurs on tendance à fixer l’adresse de certains nœuds, ce qui peut causer des collisions.
-%
-%
-%  \subsubsection{Avantages}
-%\begin{itemize}
-%\item Utilise seulement 2 lignes (+ le fil de masse) et simplicité de connexion (uniquement deux résistances de pull-up à rajouter)
-%
-%\item Le protocole limite automatiquement la vitesse de transmission à la vitesse de l’élément le plus lent.
-%
-%\item Le bit de reconnaissance qui permet de savoir si l’esclave est bien connecté et également si les données ont été correctement transmises ou non.
-%
-%\item Interconnections de multiples périphériques
-%\end{itemize}
-%
-%  \subsubsection{Inconvénients}
-%\begin{itemize}
-%\item Impossibilité d’utiliser un mode full-duplex
-%
-%\item Vitesse relativement lente pour la plupart des périphériques esclaves (100 à 400kbits/s)
-%
-%\item Consommation relativement élevée du à la configuration en collecteur/drain ouvert
-%
-%\item Distance de communication limitée car les lignes du bus ne sont pas protégées des perturbations et envoient des fronts montants et descendants. Cette distance est donc limitée par la vitesse de communication, les résistances de pull-up, la capacité du bus (en général, autour des 400pF).
-%\end{itemize}
-%
-% \section{Contrainte et choix de réalisation}
-%Concernant les contraintes techniques devant c
-
-
+	
+	
+	
+	
+	
+	
+	
+	
+	
 %--------------------------------------------------------------------------------------
 %
 %	Elément de fin de document
