report - add schema bloc for manip 1&2

--- a/ST50_Docs/rapport/ST50__ROMETPierre.tex
+++ b/ST50_Docs/rapport/ST50__ROMETPierre.tex
@@ -542,8 +542,6 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 		
 		Comme précédement, on peut résumé l'asservissement mise en place pour le projet CHAMP, sous la forme d'un shéma bloque, comme suivant:
 		
-		\newpage
-		
 	\begin{figure}[!ht]
     \center
     %\hfill\hbox to 0pt{\hss\includegraphics[width=17cm]{Assert_1.png}\hss}\hfill\null
@@ -578,13 +576,36 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 	\begin{figure}[!ht]
     \center
     %\hfill\hbox to 0pt{\hss\includegraphics[width=17cm]{transf1.png}\hss}\hfill\null
-  	\includegraphics[width=5cm]{transf1.png}
-    \caption{Modèle quelquonque}
+  	\includegraphics[width=18cm]{manip1.png}
+    \caption{Schéma bloc - Première manipulation}
 	\end{figure}	
 		
 		Nous avons utilisé un générateur de fonction 
 	
-
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	\subsection{Seconde manipulation}
+	
+		
+		
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=17cm]{transf1.png}\hss}\hfill\null
+  	\includegraphics[width=18cm]{manip2.png}
+    \caption{Schéma bloc - Seconde manipulation}
+	\end{figure}	
+		
+	
 	
 	
 
